// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component CumulativeIndicatorChart Render With daily time line and null values, should match snapshot 1`] = `
<div>
  <Highcharts
    container="HighChart-12345678"
    options={
      Object {
        "chart": Object {
          "pinchType": "xy",
          "type": "spline",
          "zoomType": "xy",
        },
        "plotOptions": Object {
          "line": Object {
            "dataLabels": Object {
              "enabled": true,
            },
            "enableMouseTracking": false,
          },
        },
        "series": Array [
          Object {
            "color": "#A8FBA8",
            "dashStyle": "Dot",
            "data": Array [
              0,
              74,
              84,
              93,
              102,
              112,
              121,
              130,
              140,
              149,
              158,
              168,
              177,
            ],
            "name": "Objectif",
          },
          Object {
            "data": null,
            "name": "Valeurs actuelles",
          },
        ],
        "subtitle": Object {
          "text": "subtitle",
        },
        "title": Object {
          "text": "title",
        },
        "tooltip": Object {
          "formatter": [Function],
          "useHTML": true,
        },
        "xAxis": Object {
          "categories": Array [
            "7 h",
            "8 h",
            "9 h",
            "10 h",
            "11 h",
            "12 h",
            "13 h",
            "14 h",
            "15 h",
            "16 h",
            "17 h",
            "18 h",
            "19 h",
          ],
        },
        "yAxis": Object {
          "title": Object {
            "text": "unit",
          },
        },
      }
    }
    status="Success"
  />
  <div
    className="cumulative-indicator-chart__root-container"
  >
    <table
      border="1"
      className="cumulative-indicator-chart__container"
    >
      <tbody>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-right"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Valeur actuelle:
            </div>
            <div
              className={null}
            >
              NaN
               
            </div>
          </td>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__target"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Cible à l'instant:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              74.483
               
              unit
            </div>
          </td>
        </tr>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-top"
            colSpan="2"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Écart:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              <span>
                -74.483
                 
                unit
              </span>
              <span>
                <span
                  className={null}
                >
                   (
                  -100.000
                   %)
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Component CumulativeIndicatorChart Render With daily time line, should match snapshot 1`] = `
<div>
  <Highcharts
    container="HighChart-12345678"
    options={
      Object {
        "chart": Object {
          "pinchType": "xy",
          "type": "spline",
          "zoomType": "xy",
        },
        "plotOptions": Object {
          "line": Object {
            "dataLabels": Object {
              "enabled": true,
            },
            "enableMouseTracking": false,
          },
        },
        "series": Array [
          Object {
            "color": "#A8FBA8",
            "dashStyle": "Dot",
            "data": Array [
              0,
              74,
              84,
              93,
              102,
              112,
              121,
              130,
              140,
              149,
              158,
              168,
              177,
            ],
            "name": "Objectif",
          },
          Object {
            "data": Array [
              0,
              10.2,
              25,
              48,
              68.84,
              98,
              99.48,
              120,
              140.2,
              180.1,
              194.02,
              200.34,
              200.14,
              208.45,
            ],
            "name": "Valeurs actuelles",
          },
        ],
        "subtitle": Object {
          "text": "subtitle",
        },
        "title": Object {
          "text": "title",
        },
        "tooltip": Object {
          "formatter": [Function],
          "useHTML": true,
        },
        "xAxis": Object {
          "categories": Array [
            "7 h",
            "8 h",
            "9 h",
            "10 h",
            "11 h",
            "12 h",
            "13 h",
            "14 h",
            "15 h",
            "16 h",
            "17 h",
            "18 h",
            "19 h",
          ],
        },
        "yAxis": Object {
          "title": Object {
            "text": "unit",
          },
        },
      }
    }
    status="Success"
  />
  <div
    className="cumulative-indicator-chart__root-container"
  >
    <table
      border="1"
      className="cumulative-indicator-chart__container"
    >
      <tbody>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-right"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Valeur actuelle:
            </div>
            <div
              className="cumulative-indicator-chart__container__value__OK"
            >
              208.450
               
              unit
            </div>
          </td>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__target"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Cible à l'instant:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              74.483
               
              unit
            </div>
          </td>
        </tr>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-top"
            colSpan="2"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Écart:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              <span>
                133.967
                 
                unit
              </span>
              <span>
                <span
                  className="cumulative-indicator-chart__container__value__OK"
                >
                   (
                  179.861
                   %)
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Component CumulativeIndicatorChart Render With monthly time line, should match snapshot 1`] = `
<div>
  <Highcharts
    container="HighChart-12345678"
    options={
      Object {
        "chart": Object {
          "pinchType": "xy",
          "type": "spline",
          "zoomType": "xy",
        },
        "plotOptions": Object {
          "line": Object {
            "dataLabels": Object {
              "enabled": true,
            },
            "enableMouseTracking": false,
          },
        },
        "series": Array [
          Object {
            "color": "#A8FBA8",
            "dashStyle": "Dot",
            "data": Array [
              52,
              60,
              67,
              74,
              82,
              89,
              97,
              104,
              112,
              119,
              127,
              134,
              142,
            ],
            "name": "Objectif",
          },
          Object {
            "data": Array [
              10.2,
              35.2,
              83.2,
              152.04,
              250.04,
              349.52,
              469.52,
              609.72,
              789.82,
              983.84,
              1184.18,
              1384.32,
              1592.77,
            ],
            "name": "Valeurs actuelles",
          },
        ],
        "subtitle": Object {
          "text": "subtitle",
        },
        "title": Object {
          "text": "title",
        },
        "tooltip": Object {
          "formatter": [Function],
          "useHTML": true,
        },
        "xAxis": Object {
          "categories": Array [
            "08",
            "09",
            "10",
            "11",
            "12",
            "13",
            "14",
            "15",
            "16",
            "17",
            "18",
            "19",
            "20",
          ],
        },
        "yAxis": Object {
          "title": Object {
            "text": "unit",
          },
        },
      }
    }
    status="Success"
  />
  <div
    className="cumulative-indicator-chart__root-container"
  >
    <table
      border="1"
      className="cumulative-indicator-chart__container"
    >
      <tbody>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-right"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Valeur actuelle:
            </div>
            <div
              className="cumulative-indicator-chart__container__value__OK"
            >
              1592.770
               
              unit
            </div>
          </td>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__target"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Cible à l'instant:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              134.070
               
              unit
            </div>
          </td>
        </tr>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-top"
            colSpan="2"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Écart:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              <span>
                1458.700
                 
                unit
              </span>
              <span>
                <span
                  className="cumulative-indicator-chart__container__value__OK"
                >
                   (
                  1088.014
                   %)
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Component CumulativeIndicatorChart Render With yearly time line, should match snapshot 1`] = `
<div>
  <Highcharts
    container="HighChart-12345678"
    options={
      Object {
        "chart": Object {
          "pinchType": "xy",
          "type": "column",
          "zoomType": "xy",
        },
        "plotOptions": Object {
          "line": Object {
            "dataLabels": Object {
              "enabled": true,
            },
            "enableMouseTracking": false,
          },
        },
        "series": Array [
          Object {
            "color": "#A8FBA8",
            "dashStyle": "Dot",
            "data": Array [
              223.45,
            ],
            "name": "Objectif",
          },
          Object {
            "data": Array [
              10.2,
              25,
              48,
              68.84,
              98,
              99.48,
              120,
              140.2,
              180.1,
              194.02,
              200.34,
              200.14,
              208.45,
            ],
            "name": "Valeurs actuelles",
          },
        ],
        "subtitle": Object {
          "text": "subtitle",
        },
        "title": Object {
          "text": "title",
        },
        "tooltip": Object {
          "formatter": [Function],
          "useHTML": true,
        },
        "xAxis": Object {
          "categories": Array [
            "Aug",
            "Sep",
            "Oct",
            "Nov",
            "Dec",
            "Jan",
            "Feb",
            "Mar",
            "Apr",
            "May",
            "Jun",
            "Jul",
            "Aug",
          ],
        },
        "yAxis": Object {
          "title": Object {
            "text": "unit",
          },
        },
      }
    }
    status="Success"
  />
  <div
    className="cumulative-indicator-chart__root-container"
  >
    <table
      border="1"
      className="cumulative-indicator-chart__container"
    >
      <tbody>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-right"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Valeur actuelle:
            </div>
            <div
              className="cumulative-indicator-chart__container__value__OK"
            >
              1592.770
               
              unit
            </div>
          </td>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__target"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Cible à l'instant:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              223.450
               
              unit
            </div>
          </td>
        </tr>
        <tr>
          <td
            className="cumulative-indicator-chart__container__value cumulative-indicator-chart__container__border-top"
            colSpan="2"
          >
            <div
              className="cumulative-indicator-chart__label"
            >
              Écart:
            </div>
            <div
              className="cumulative-indicator-chart__container__value"
            >
              <span>
                1369.320
                 
                unit
              </span>
              <span>
                <span
                  className="cumulative-indicator-chart__container__value__OK"
                >
                   (
                  612.808
                   %)
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
